--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,13 +1,22 @@
 <%= simple_form_for(@user) do |f| %>
-  <%= f.input :name, input_html: { class:'form-control' } %>
-  <%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %>
-  <%= f.label :password %><br />
-  <%= f.password_field :password, autocomplete: "off" %></div>
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-  <%= f.input :role, collection: User::ROLE,  input_html:{ class: 'form-control'} %>
-  <%= f.submit "Crear" %>
+  <div class="col-md-12">
+    <div class="col-md-8">
+      <%= f.input :name, input_html: { class:'form-control' }, label: User.human_attribute_name(:name) %>
+    </div>
+    <div clasS="col-md-8">
+      <%= f.input :email, autofocus: true, as: :email, input_html: {class: 'form-control'}, label: User.human_attribute_name(:email)%>
+    </div>
+    <div class="col-md-8">
+      <%= f.input :password, autocomplete: "off" , input_html: {class: 'form-control'}, label: User.human_attribute_name(:password) %>
+      <%= f.input :password_confirmation, autocomplete: "off" , input_html: {class: 'form-control'}, label: User.human_attribute_name(:password_confirmation) %>
+    </div>
+    <div class="col-md-8">
+      <%= f.input :role, collection: User::ROLE,  input_html:{ class: 'form-control'} , label: User.human_attribute_name(:role) %>
+    </div>
+    <div class="col-md-8"><br>
+      <%= f.submit "Crear", class: "btn btn-primary" %>
+    </div>
+  </div>
 <% end %>
 
 
