--- a/app/views/accounting_records/index.html.erb
+++ b/app/views/accounting_records/index.html.erb
@@ -36,7 +36,9 @@
       </table>
       <div>
         <h4>Total de Caja: <%= number_to_currency(@caja_total) %></h3>
-        <h4>Total de Ganancia: <%= number_to_currency(@earnings) %></h3>
+       <% if current_user.role == 'admin' %>
+         <h4>Total de Ganancia: <%= number_to_currency(@earnings) %></h3>
+       <% end %>
       </div>
       <%= link_to 'Nuevo Registro', new_accounting_record_path %>
     </div>
