--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -31,10 +31,9 @@
       <% end %>
         <li><%= link_to "Remitos", new_invoice_path %></li>
 
-     <%  if current_user.role == 'admin' %>
         <li><%= link_to "Caja Diaria", accounting_records_path %></li>
-      <% end %>
         <li><%= link_to "Cerrar Session", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to current_user.email, edit_user_path(current_user) %></li>
 
       </ul>
     </div><!-- /.navbar-collapse -->
