--- a/app/views/invoice_stocks/_stocks.html.erb
+++ b/app/views/invoice_stocks/_stocks.html.erb
@@ -21,7 +21,7 @@
 
 
   <div class=" col-md-2">
-    <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control "}  %>
+    <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control due_date "}  %>
   </div>
 
   <div class="col-md-2">
