--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -29,7 +29,9 @@
       <div>
         <%= link_to 'Nuevo Articulo', new_article_path %>
       </div>
-
+      <div>
+        Vencimientos
+    </div>
     </div>
     <div class="col-sm-offset-2 col-md-9 col-md-offset-3">
       <div>
