--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -10,7 +10,7 @@
   <%= f.input :article_id, :input_html => {class: 'form-control'} , as: :hidden, label: false%>
   </td>
   <td class="col-md-2">
-    <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity", :value=>1}  %>
+    <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control quantity"}  %>
   </td>
   <td class="col-md-1">
   <%= f.input :discount, label: false, as: :string, :input_html => {:class => "form-control discount"}  %>
