--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -36,15 +36,18 @@
       <%end %>
     </div>
   </div>
-  <div>
-    <h1> <a href="" id="printOut" class="btn btn-primary hidden-print">Imprimir</a></h1>
-  </div>
+
 </div>
 <p>
 <b>Precio total: $</b>
 <%= @invoice.price_total %>
 </p>
+<div>
 
+    <a href="" id="printOut" class=" btn btn-primary hidden-print">Imprimir</a>
+    <%= link_to "Editar", edit_invoice_path(@invoice.id), class: "btn btn-primary"   %>
 </div>
+    
+    </div>
 </div>
 </div>
