--- a/app/views/articles/index.xls.erb
+++ b/app/views/articles/index.xls.erb
@@ -6,7 +6,7 @@
   <td>Preio Total</td>
   <td>Cantidad</td>
   </tr>
-<% @articles_all.each do |article| %>
+<% @articles.each do |article| %>
   <tr>
     <td><%= article.name %></td>
     <td><%= article.price_cost %></td>
