--- a/app/views/invoice_stocks/_stocks.html.erb
+++ b/app/views/invoice_stocks/_stocks.html.erb
@@ -1,43 +1,44 @@
- <div class="col-md-12 line3">
+<div class="col-md-12 line3">
   <div class="col-md-4">
-        <%= f.input :article, label: false,  input_html: {
-                 class: 'form-control ',
-                 data: {'autocomplete-field' => true,
-                        'autocomplete-for' => '#invoice_stock_stocks_#{id}_article_id',
-                        'autocomplete-url' => articles_path(format: :json)
-              } 
-              } %>
-         <%= f.input :article_id, :input_html => {class: 'form-control'} , as: :hidden,  label: false%>
+    <%= f.input :article, label: false,  input_html: {
+      class: 'form-control ',
+      data: {'autocomplete-field' => true,
+             'autocomplete-for' => '#invoice_stock_stocks_#{id}_article_id',
+             'autocomplete-url' => articles_path(format: :json)
+    } 
+    } %>
+  <%= f.input :article_id, :input_html => {class: 'form-control'} , as: :hidden,  label: false%>
 
   </div>
-  <div class=" col-md-1">
+  <div class=" col-md-2">
+  <div class=" col-md-6">
     <%= f.input :quantity, label: false, as: :string, :input_html => {:class => "form-control  quantity "}  %>
   </div>
- 
-  <div class=" col-md-1">
+  <div class=" col-md-6">
+    <%= f.input :stock, label: false, as: :string, :input_html => {:class => "form-control  stock col-md-1"}  %>
+
+  </div>
+  </div>
+
+  <div class=" col-md-2">
     <%= f.input :price_cost, label: false, as: :string, :input_html => {:class => "form-control price_cost_stock "}  %>
   </div>
 
 
   <div class=" col-md-2">
-        
+
     <%= f.input :due_date, label: false, as: :string, :input_html => {:class => "form-control  datepicker "}  %>
   </div>
 
   <div class="col-md-2">
-            <%= f.input :category_id, label: false do %>
-               <%= f.collection_select :category_id,  Category.order(:name), :id, :name, class: "form-control", label: false %>
-   <% end  %>
-
+    <%= f.input :suppliery_id, label: false do %>
+      <%= f.collection_select :supplier_id,  Supplier.order(:name), :id, :name, class: "form-control", label: false %>
+    <% end  %>
   </div>
-   <div class="col-md-2">
-     <%= f.input :price_total, label: false, as: :string, input_html: {class: "form-control price_subtotal"} %>
-  
-</div>
 
 
 
-   
+
 
 
 </div>
